[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "rnastructure_wrapper"
description = "A wrapper around RNAstructure. This work is independent from Dr. Mathew's work on RNAstructure, and is meant for personal use."
authors = [
    "Yves Martin des Taillades <yves@martin.yt>",
]
license = "MIT"
repository = "https://github.com/yvesmartindestaillades/rnastructure"
readme = "README.md"
keywords = ["Mathews", "rnastructure"]


[tool.poetry.dependencies]
python = ">=3.10"
